--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build:lib": "rimraf lib && cross-env NODE_ENV=production babel -d lib/ src/",
     "build:dist": "rimraf dist && cross-env NODE_ENV=production webpack --config webpack.config.dist.js --optimize-minimize",
-    "build:src": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js --optimize-minimize && cp src/index.prod.html build/index.html",
+    "build:src": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js --optimize-minimize && cp-cli src/index.html build/index.html",
     "cs-check": "prettier -l $npm_package_prettierOptions '{src,src,test}/**/*.js'",
     "cs-format": "prettier $npm_package_prettierOptions '{src,src,test}/**/*.js' --write",
     "dist": "npm run build:lib && npm run build:dist",
